compiler/src/test/test_cases/invalid/syntaxErr/forLoop/noLoopExpr.wacc
# No looping expression present

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (int i = 10, i = i - 1) do
    println "Are you trying to make this for loop go on forever?"
  done
end